# Tabulex

./: LICENSE  README.md  pyproject.toml
src/tabulex/: __init__.py  adapters.py  api.py  extraction.py  models.py  normalize.py
