[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabulex"
version = "0.1.0"
description = "Extract tables from PDFs to pandas, polars, and JSON. / Extrae tablas de PDFs a pandas, polars y JSON."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Alejandro B.C (Blaron)" }
]
keywords = [
  "pdf",
  "tables",
  "pandas",
  "polars",
  "json",
  "extraction",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Markup",
]
dependencies = [
  "pymupdf>=1.24,<2.0",
  "pandas>=2.2,<3.0",
  "polars>=1.0,<2.0",
]

[project.optional-dependencies]
image = [
  "Pillow>=10.0",
]
ocr = [
  "Pillow>=10.0",
  "pytesseract>=0.3.13",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
]
publish = [
  "build>=1.2",
  "twine>=6.0",
]

[project.urls]
Homepage = "https://github.com/Blaron/Tabulex/"
Repository = "https://github.com/Blaron/Tabulex/"
Issues = "https://github.com/Blaron/Tabulex/"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
